--- a/[jrdetorre_]_ihr_Write_SQL_with_natural_language_using_VerteX_AI_and_BigQuery_[workshop].ipynb
+++ b/[jrdetorre_]_ihr_Write_SQL_with_natural_language_using_VerteX_AI_and_BigQuery_[workshop].ipynb
@@ -28,7 +28,8 @@
         "\n",
         "* Twitter: [@herraiz](http://twitter.com/herraiz)\n",
         "* LinkedIn (mention that you were an attendee in this workshop): https://en.linkedin.com/in/herraiz\n",
-        "* https://medium.com/@iht"
+        "* https://medium.com/@iht",
+        "* Post: [link](https://medium.com/google-cloud/write-sql-with-natural-language-using-vertex-ai-and-bigquery-c849559f8a5f)"
       ],
       "metadata": {
         "id": "gxcU20E6zfMy"
